@@ -1,5 +1,13 @@
 package com.twitter.scrooge
 
+object ThriftService {
+
+  /**
+   * A string representing reserved method name `asClosable`
+   */
+  val AsClosableMethodName: String = "asClosable"
+}
+
 /**
  * A marker trait for interfaces that represent thrift services.
  */
